--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -211,7 +211,7 @@ height: 230px;
 overflow: hidden;
 }
 .thumbnail img{
-width: 500px;
+width: 100%;
 height: auto;
 position: relative;
 left: -25%;
