--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -210,9 +210,12 @@ width: 100%;
 height: 230px;
 overflow: hidden;
 }
-.thumbnail img{
-width: 100%;
-height: auto;
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    left: 0;
+    top: 0;
 }
 .thumbnail a{
 float: left;
