--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -214,8 +214,8 @@ overflow: hidden;
     width: 100%;
     height: 100%;
     position: relative;
-    left: 0;
-    top: 0;
+    left: 30px;
+    top: 100px;
 }
 .thumbnail a{
 float: left;
